# tiny-diff

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_templates/: custom-class-template.rst
examples/: README.md  latent_ddpm.py  vae_gan.py
src/tiny_diff/: __init__.py  __version__.py  constants.py  utils.py
src/tiny_diff/losses/: __init__.py  normal.py  vae_loss.py
src/tiny_diff/losses/discriminator/: __init__.py  d_loss.py  hinge.py  vanilla.py
src/tiny_diff/models/: __init__.py  conv_model.py  discriminator.py
src/tiny_diff/models/unet/: layers.py  model.py  wrappers.py
src/tiny_diff/models/vae/: __init__.py  components.py  gan.py  layers.py  model.py
src/tiny_diff/modules/: __init__.py  attention.py  conv.py  layer_factory.py  nonlinearity.py  norm.py  resampling.py
src/tiny_diff/modules/residual/: __init__.py  blocks.py  layers.py
src/tiny_diff/schedulers/: __init__.py  ddpm.py
tests/: conftest.py
tests/models/: test_unet.py  test_vae.py
tests/modules/: test_attention.py
